ejercicio_11/03_prod/11_areas-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: areas-frontend-service
  namespace: prod
spec:
  selector:
    app: areas-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
