ejercicio_11/03_prod/12_areas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: areas-ingress
  namespace: prod
spec:
  rules:
  - host: areas.local.prod
    http:
      paths:
      - path: /apidashboard
        pathType: Prefix
        backend:
          service:
            name: areas-backend-service
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: angular-frontend-service
            port:
              number: 80
